--- a/Apps/Home/index.html
+++ b/Apps/Home/index.html
@@ -1,5 +1,5 @@
   <header class="header">
-    <span class="logo-name">租赁买卖信息网</span>
+    <span class="logo-name">校园租赁买卖信息分享</span>
     <ul class='nav-ul'>
 
       <if condition="$Think.session.nickname neq ''">
