--- a/Apps/Home/index.html
+++ b/Apps/Home/index.html
@@ -1,5 +1,5 @@
   <header class="header">
-    <span class="logo-name">川大跳蚤市场</span>
+    <span class="logo-name"><img src="__PUBLIC__/image/logoheader.png" alt="川大跳槽市场"/>川大跳蚤市场</span>
     <ul class='nav-ul'>
 
       <if condition="$Think.session.nickname neq ''">
